# Yale-Energy-Usage

./: LICENSE  README.md  pyproject.toml
data/clean/: building_sets.csv  set_membership.csv
data/raw/: building_sets.csv  facilities.csv  set_membership.csv
notebooks/: 01_facility_data.ipynb  01_scrape_data.ipynb  02_clean_all.ipynb  02_energy_data.ipynb  energy_data.ipynb  facility_data.ipynb
